Modified WildCard to ask for color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,9 @@
         android:layout_marginRight="57dp"
         android:layout_marginBottom="27dp"
         android:ems="10"
-        android:hint="@string/command_hint"
+        android:hint="@string/send_command"
         android:inputType="textPersonName"
-        android:text="@string/send_command"
+        android:text="@string/blank"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/send_button"
         app:layout_constraintStart_toStartOf="parent"
