finished basic account page / account management page. Finished basic routing of all of the user preferences, such as password and email management. Next: keeping the user logged in when the app is navigated away from, but is still in memory.

--- a/app/src/main/res/layout/activity_user_account.xml
+++ b/app/src/main/res/layout/activity_user_account.xml
@@ -126,6 +126,12 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/btn_back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back to Main" />
+
+        <Button
             android:id="@+id/change_email_button"
             style="?android:textAppearanceSmall"
             android:layout_width="match_parent"
